# soliplex-plumber

./: 404.html  README.md  index.html  pyproject.toml  search.json  sitemap.xml  zensical.toml
.github/workflows/: pypi.yaml  python-lint.yaml  python-test.yaml
docs/: index.md
docs/reference/: api.md
reference/api/: index.html
src/soliplex_plumber/: __init__.py  installation.py  rooms.py  sections.py  soliplex_config.py  stack.py
tests/unit/: conftest.py  test_installation.py  test_rooms.py  test_sections.py  test_soliplex_config.py  test_stack.py
