[project]
name = "soliplex-plumber"
version = "0.1de0"
description = "tools for modifying a Soliplex stack"
readme = "README.md"
authors = [
    { name = "Tres Seaver", email = "tseaver@palladion.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"
